--- a/back_end/package.json
+++ b/back_end/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "mongoose": "^8.8.2"
   },
   "devDependencies": {
